--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,25 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@drawable/main_img"
         android:supportsRtl="true"
         android:theme="@style/Theme.News"
         tools:targetApi="31">
         <activity
+            android:name=".Article_recycler"
+            android:exported="false" />
+        <activity
+            android:name=".AddArticles"
+            android:exported="false" />
+        <activity
             android:name=".Dashboard"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,7 +37,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
